headers reorganized: split indicators.h into 3 new code for optimizing swarming patterns instead of static networks put in DisplayFarm class for manging a variable number of display controllers option in network-optimize.cpp to create an initial network and reverse all of its edges (for instance, to try the superstar backwards)

--- a/egt/makefile
+++ b/egt/makefile
@@ -3,17 +3,25 @@ ESTRDIR = ../libexecstream
 CFLAGS=-g -I$(VXLDIR)/core -I$(VXLDIR)/vcl -I$(VXLDIR)/core/vnl -I$(VXLDIR)/v3p/netlib -I$(ESTRDIR)
 LDFLAGS=$(ESTRDIR)/exec-stream.o -L$(VXLDIR)/core/vnl/algo -L$(VXLDIR)/core/vnl/ -L$(VXLDIR)/vcl -L$(VXLDIR)/v3p/netlib -lvnl_algo -lvnl -lvcl -lnetlib -lv3p_netlib -lpthread
 
-#CFLAGS+=-O3
+# enable to use compiler optimization
+OPTIMIZE=yes
+ifeq ($(OPTIMIZE),yes)
+CFLAGS+=-O3
+endif
 
+#default: swarming
 default: network-optimize
 
 NOSRC = network-optimize.cpp DotDisplay.cpp TimeSeriesDisplay.cpp
 NOOBJ = $(NOSRC:.cpp=.o)
 
+SWSRC = swarming.cpp TimeSeriesDisplay.cpp
+SWOBJ = $(SWSRC:.cpp=.o)
+
 # %.o : %.cpp
 # 	$(CXX) $(CFLAGS) $(CXXFLAGS) $< -c -o $@
 
-# fancy GNU-style line for tracking header dependencies
+# fancy GNU-style line for tracking header dependencies in .P files
 %.o : %.cpp
 	$(CXX) $(CFLAGS) $(CXXFLAGS) -MD -c $< -o $@
 	@cp $*.d $*.P; \
@@ -21,15 +29,22 @@ NOOBJ = $(NOSRC:.cpp=.o)
 	        -e '/^$$/ d' -e 's/$$/ :/' < $*.d >> $*.P; \
 	    rm -f $*.d
 
-NODEP = $(NOSRC:.cpp=.P)
+NODEP = $(NOOBJ:.o=.P)
 
 -include $(NODEP)
+
+SWDEP = $(SWOBJ:.o=.P)
+
+-include $(SWDEP)
 
 network-optimize : $(NOOBJ)
 	$(CXX) $(CFLAGS) $(CXXFLAGS) -o $@ $(NOOBJ) $(LDFLAGS)
 
+swarming : $(SWOBJ)
+	$(CXX) $(CFLAGS) $(CXXFLAGS) -o $@ $(SWOBJ) $(LDFLAGS)
+
 clean:
-	$(RM) *.o *~ *#
+	$(RM) *.o *.P *~ *#
 
 clear:
 	$(RM) -r out
