--- a/egt/settings/defaults-general.settings
+++ b/egt/settings/defaults-general.settings
@@ -8,6 +8,7 @@ displayEvery 0
 scrollingWindow 10000000
 gnuplotCommand gnuplot
 ghostviewCommand gv
+ghostviewUpdateStrategy signal
 
 print_stuff true
 
