2 bug fixes regarding displaying picture of the graph

--- a/egt/settings/network-power-sample.settings
+++ b/egt/settings/network-power-sample.settings
@@ -14,4 +14,4 @@ timesToTestFixation 40000
 require_strongly_connected true
 
 # to disable ghostview popcorn
-ghostviewCommand=/bin/true
+ghostviewCommand /bin/true
