random number seed

--- a/net-dyn-lib/makefile
+++ b/net-dyn-lib/makefile
@@ -9,8 +9,8 @@ $(NETDYNLIB) : $(NETDYNOBJ)
 
 # stuff for automatic header file dependencies
 
-CFLAGS=-g -I$(NETDYNLIB) -I../libexecstream -I../vxl/core -I../vxl/vcl -I../vxl/core/vnl -I../vxl/v3p/netlib -I../vxl/v4p/netlib
-LDFLAGS=-L$(NETDYNLIB) ../libexecstream/exec-stream.o -L../vxl/core/vnl/algo -L../vxl/core/vnl -L../vxl/vcl -L../vxl/v3p/netlib -L../vxl/lib -lnet-dyn -lvnl_algo -lvnl -lvcl -lnetlib -lv3p_netlib -lpthread
+CFLAGS=-g -I../libexecstream -I../vxl/core -I../vxl/vcl -I../vxl/core/vnl -I../vxl/v3p/netlib -I../vxl/v4p/netlib
+LDFLAGS=../libexecstream/exec-stream.o -L../vxl/core/vnl/algo -L../vxl/core/vnl -L../vxl/vcl -L../vxl/v3p/netlib -L../vxl/lib -lnet-dyn -lvnl_algo -lvnl -lvcl -lnetlib -lv3p_netlib -lpthread
 
 %.o : %.cpp
 	$(CXX) $(CFLAGS) -MD -c $< -o $@
