--- a/egt/makefile
+++ b/egt/makefile
@@ -25,6 +25,9 @@ NETDYNLIB = $(NETDYNDIR)/libnet-dyn.a
 $(NETDYNLIB) :
 	(cd $(NETDYNDIR) && $(MAKE))
 
+network-optimize : network-optimize.o
+	$(CXX) $(CFLAGS) $< $(LDFLAGS) -o $@
+
 sensitivity : sensitivity.o
 	$(CXX) $(CFLAGS) $< $(LDFLAGS) -o $@
 
