option not to print adjacency matrix

--- a/egt/settings/defaults-general.settings
+++ b/egt/settings/defaults-general.settings
@@ -11,6 +11,7 @@ ghostviewCommand gv
 ghostviewUpdateStrategy signal
 
 print_stuff true
+print_adjacency_matrix true
 
 # for hill climbing
 trialsForLocalOptimum 200
