--- a/egt/settings/defaults-network.settings
+++ b/egt/settings/defaults-network.settings
@@ -25,6 +25,7 @@ merge_and_clone_mutation_probability 0
 # split_edge_mutation_probability is the remainder
 
 #  --- for the fixation process
+skipFixation false
 #choose_parent_first true #false
 update_rule EGT
 residentFitness 1
