--- a/egt/settings/network-power-sample.settings
+++ b/egt/settings/network-power-sample.settings
@@ -9,7 +9,8 @@ pl_out_exp 2
 
 animate_estimates false # true
 
-timesToTestFixation 40000
+#timesToTestFixation 40000
+timesToTestFixation 100000
 #monte_carlo_selection_accuracy 0.02 # 0.004
 require_strongly_connected true
 
