--- a/egt/settings/network-power-sample.settings
+++ b/egt/settings/network-power-sample.settings
@@ -8,11 +8,11 @@ pl_in_exp 1.5
 pl_out_exp 2
 
 animate_estimates false # true
+record_dynamics true
 
-#timesToTestFixation 40000
-timesToTestFixation 100000
+timesToTestFixation 40000
 #monte_carlo_selection_accuracy 0.02 # 0.004
 require_strongly_connected true
 
 # to disable ghostview popcorn
-hostviewCommand /bin/true
+ghostviewCommand /bin/true
